--- a/ru/index.html
+++ b/ru/index.html
@@ -6,24 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Sinodeep</title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="/css/reset.css">
-    <script defer src="/js/script.js"></script>
-    <script defer src="/server.js"></script>
+    <script defer src="../js/script.js"></script>
+    <script defer src="../server.js"></script>
 
     <meta name="keywords" content="sinodeep, Sinodeep">
     <meta name="description" content="Открываем Китай для вашего бизнеса">
 
-    <link rel="icon" type="image/ico" sizes="32x32" href="/lib/logo_without_text.svg">
-    <link rel="icon" type="image/ico" sizes="16x16" href="/lib/logo_without_text.svg">
+    <link rel="icon" type="image/ico" sizes="32x32" href="../lib/logo_without_text.svg">
+    <link rel="icon" type="image/ico" sizes="16x16" href="../lib/logo_without_text.svg">
     <link rel="shortcut icon" href="/icons/icon1.ico">
 
     <meta property="og:title" content="Sinodeep">
     <meta property="og:site_name" content="Sinodeep">
     <meta property="og:url" content="https://github.com/trushkai/Sinodeep">
     <meta property="og:description" content="blablabla ...">
-    <meta property="og:image" content="https://trushkai.github.io/Sinodeep/lib/lgo.svg">
+    <meta property="og:image" content="https://trushkai.github.io/Sinodeep/lib/logo.svg">
 
     <meta name="theme-color" content="#f0adb1" />
     <meta name="msapplication-navbutton-color" content="#4285f4" />
@@ -38,7 +38,7 @@
     <header class="header">
         <div class="container navbar">
             <div class="navbar__logo">
-                <img src="/lib/logo.svg" alt="Sinodeep Logo" class="navbar__logo-image">
+                <img src="../lib/logo.svg" alt="Sinodeep Logo" class="navbar__logo-image">
             </div>
             <div class="navbar__links">
                 <a href="#portfolio" class="navbar__link" data-i18n="files">
@@ -62,7 +62,7 @@
             </div>
             <div class="navbar__right">
                 <button id="language-switcher" class="language-switcher" aria-label="Switch language">
-                    <img src="/lib/ruen.svg" alt="Русский" class="language-icon" id="language-icon">
+                    <img src="../lib/ruen.svg" alt="Русский" class="language-icon" id="language-icon">
                 </button>
             </div>
             <button class="burger-btn burger">
@@ -82,17 +82,17 @@
                     <div class="cubes-grid">
                         <div class="cube cube-1">
                             <div class="image-wrapper-cube">
-                                <img src="/lib/hero/1.svg" alt="Производство" class="cube-image">
+                                <img src="../lib/hero/1.svg" alt="Производство" class="cube-image">
                             </div>
                         </div>
                         <div class="cube cube-2">
                             <div class="image-wrapper">
-                                <img src="/lib/hero/2.svg" alt="Логистика" class="cube-image">
+                                <img src="../lib/hero/2.svg" alt="Логистика" class="cube-image">
                             </div>
                         </div>
                         <div class="cube cube-3">
                             <div class="image-wrapper">
-                                <img src="/lib/hero/3.svg" alt="Контроль" class="cube-image">
+                                <img src="../lib/hero/3.svg" alt="Контроль" class="cube-image">
                             </div>
                         </div>
                     </div>
@@ -181,7 +181,7 @@
                             </div>
                         </div>
                         <div class="extra--help-card extra--help-card4">
-                            <img class="extra_image" src="/lib/extraHelp.svg" alt="storage">
+                            <img class="extra_image" src="../lib/extraHelp.svg" alt="storage">
                         </div>
                     </div>
                 </div>
@@ -248,7 +248,7 @@
             <div class="container job-description__wrapper">
                 <div class="job-description__container">
                     <div>
-                        <img class="job-description-image" src="/lib/jobDescription.png" alt="job-description">
+                        <img class="job-description-image" src="../lib/jobDescription.png" alt="job-description">
                     </div>
                     <div class="job-description__block">
                         <h2 class="job-description__title">Ваш прямой доступ к лучшим <br>производителям Китая</h2>
@@ -304,14 +304,14 @@
                         <div class="logic-card logic-card1">
                             <div class="logic-content-row">
                                 <h3 class="logic-content-text">Индивидуальные маршруты с учетом Ваших потребностей</h3>
-                                <img class="logic_image" src="/lib/logic/logic_laptop.svg" alt="laptop">
+                                <img class="logic_image" src="../lib/logic/logic_laptop.svg" alt="laptop">
                             </div>
                         </div>
                         <div class="logic-card logic-card2">
                             <div class="logic-content-column">
                                 <h3 class="logic-content-text">Все виды транспорта: морской, ж/д, авто, авиа,
                                     комбинированные</h3>
-                                <img class="logic_image" src="/lib/logic/logic_truck-vehicle.svg" alt="truck">
+                                <img class="logic_image" src="../lib/logic/logic_truck-vehicle.svg" alt="truck">
                             </div>
                         </div>
                         <div class="logic-card logic-card3">
@@ -336,14 +336,14 @@
                             <div class="logic-content-column">
                                 <h3 class="logic-content-text">Команда опытных логистов, быстрое реагирование на
                                     проблемы</h3>
-                                <img class="logic_image" src="/lib/logic/logic_american-woman.svg" alt="woman">
+                                <img class="logic_image" src="../lib/logic/logic_american-woman.svg" alt="woman">
                             </div>
                         </div>
                         <div class="logic-card logic-card5">
                             <div class="logic-content-row">
                                 <h3 class="logic-content-text">Оптимизация логистической цепочки (консолидация, склад,
                                     таможня, страхование)</h3>
-                                <img class="logic_image" src="/lib/logic/logic_man-working.svg" alt="man">
+                                <img class="logic_image" src="../lib/logic/logic_man-working.svg" alt="man">
                             </div>
                         </div>
                     </div>
@@ -358,7 +358,7 @@
                     <h2 class="portfolio__title">Более 10 лет на службе вашего экспорта</h2>
                     <div class="portfolio-cards">
                         <div class="portfolio-card portfolio-card1">
-                            <img class="director-img" src="/lib/director.svg" alt="Директор-Андрей">
+                            <img class="director-img" src="../lib/director.svg" alt="Директор-Андрей">
                         </div>
                         <div class="portfolio-card portfolio-card2">
                             <h3 class="portfolio-content-text">Меня зовут Андрей, я являюсь генеральным директором
@@ -388,7 +388,7 @@
                     <div class="col-lg-3">
                         <div class="choose__item">
                             <div>
-                                <img class="why-img" src="/img/why1.png" alt="человек одобряет">
+                                <img class="why-img" src="../img/why1.png" alt="человек одобряет">
                             </div>
                             <h3 class="choose__item-title">Комплексные решения:</h3>
                             <p class="choose__item-text">Поможем Вам на каждом этапе – от поиска товара до его доставки
@@ -398,7 +398,7 @@
                     <div class="col-lg-3">
                         <div class="choose__item">
                             <div>
-                                <img class="why-img" src="/img/why2.png" alt="пазл">
+                                <img class="why-img" src="../img/why2.png" alt="пазл">
                             </div>
                             <h3 class="choose__item-title1">Опыт и знания:</h3>
                             <p class="choose__item-text">Знаем рынок Китая, как свои пять пальцев, и готовы поделиться
@@ -408,7 +408,7 @@
                     <div class="col-lg-3">
                         <div class="choose__item">
                             <div>
-                                <img class="why-img" src="/img/why3.png" alt="книга с лампочкой">
+                                <img class="why-img" src="../img/why3.png" alt="книга с лампочкой">
                             </div>
                             <h3 class="choose__item-title">Надежность и прозрачность:</h3>
                             <p class="choose__item-text">Для нас важны честность и открытость на каждом этапе
@@ -418,7 +418,7 @@
                     <div class="col-lg-3">
                         <div class="choose__item">
                             <div>
-                                <img class="why-img" src="/img/why4.png" alt="одобрено">
+                                <img class="why-img" src="../img/why4.png" alt="одобрено">
                             </div>
                             <h3 class="choose__item-title">Персональный подход:</h3>
                             <p class="choose__item-text">Работаем как партнеры и адаптируем наши услуги под Ваши
@@ -509,16 +509,16 @@
                             <h3 class="contacts__title">Задайте вопрос в мессенджер</h3>
                             <div class="messengers">
                                 <a href="https://vk.com/andrew_westnord" target="_blank" class="messenger-item">
-                                    <img src="/lib/vkontacteBlue.svg" alt="Vkontakte">
+                                    <img src="../lib/vkontacteBlue.svg" alt="Vkontakte">
                                 </a>
                                 <a href="https://t.me/optoboxer" target="_blank" class="messenger-item">
-                                    <img src="/lib/telegramBlue.svg" alt="Telegram">
+                                    <img src="../lib/telegramBlue.svg" alt="Telegram">
                                 </a>
                                 <a href="tel:+8618812603001" class="messenger-item">
-                                    <img src="/lib/whatsappBlue.svg" alt="WhatsApp">
+                                    <img src="../lib/whatsappBlue.svg" alt="WhatsApp">
                                 </a>
                                 <a href="#" class="messenger-item">
-                                    <img src="/lib/vichat2.png" alt="ViChat">
+                                    <img src="../lib/vichat2.png" alt="ViChat">
                                 </a>
                             </div>
                         </div>
@@ -566,62 +566,62 @@
                 <h2 class="partners__title">Наши партнеры</h2>
                 <div class="partners-track">
                     <div class="partner-card">
-                        <img src="/lib/partners/alfa-m.svg" alt="Альфа-М" class="partner-image">
+                        <img src="../lib/partners/alfa-m.svg" alt="Альфа-М" class="partner-image">
                     </div>
                     <div class="partner-card">
-                        <img src="/lib/partners/first_hardware.svg" alt="First Hardware" class="partner-image">
+                        <img src="../lib/partners/first_hardware.svg" alt="First Hardware" class="partner-image">
                     </div>
                     <div class="partner-card">
-                        <img src="/lib/partners/techno_vector.svg" alt="Techno Vector" class="partner-image">
+                        <img src="../lib/partners/techno_vector.svg" alt="Techno Vector" class="partner-image">
                     </div>
                     <div class="partner-card">
-                        <img src="/lib/partners/moscow_government.svg" alt="Московское правительство"
+                        <img src="../lib/partners/moscow_government.svg" alt="Московское правительство"
                             class="partner-image">
                     </div>
                     <div class="partner-card">
-                        <img src="/lib/partners/tm_pz.svg" alt="TM PZ" class="partner-image">
+                        <img src="../lib/partners/tm_pz.svg" alt="TM PZ" class="partner-image">
                     </div>
                     <div class="partner-card">
-                        <img src="/lib/partners/kamaz.svg" alt="КАМАЗ" class="partner-image">
+                        <img src="..lib/partners/kamaz.svg" alt="КАМАЗ" class="partner-image">
                     </div>
                     <div class="partner-card">
-                        <img src="/lib/partners/tatneft.svg" alt="Татнефть" class="partner-image">
+                        <img src="../lib/partners/tatneft.svg" alt="Татнефть" class="partner-image">
                     </div>
                     <div class="partner-card">
-                        <img src="/lib/partners/rostselmash.svg" alt="Ростсельмаш" class="partner-image">
+                        <img src="../lib/partners/rostselmash.svg" alt="Ростсельмаш" class="partner-image">
                     </div>
                     <div class="partner-card">
-                        <img src="/lib/partners/height.svg" alt="Height" class="partner-image">
+                        <img src="../lib/partners/height.svg" alt="Height" class="partner-image">
                     </div>
 
                     <!-- Дублирующий набор для бесшовной анимации -->
                     <div class="partner-card">
-                        <img src="/lib/partners/alfa-m.svg" alt="Альфа-М" class="partner-image">
+                        <img src="../lib/partners/alfa-m.svg" alt="Альфа-М" class="partner-image">
                     </div>
                     <div class="partner-card">
-                        <img src="/lib/partners/first_hardware.svg" alt="First Hardware" class="partner-image">
+                        <img src="../lib/partners/first_hardware.svg" alt="First Hardware" class="partner-image">
                     </div>
                     <div class="partner-card">
-                        <img src="/lib/partners/techno_vector.svg" alt="Techno Vector" class="partner-image">
+                        <img src="../lib/partners/techno_vector.svg" alt="Techno Vector" class="partner-image">
                     </div>
                     <div class="partner-card">
-                        <img src="/lib/partners/moscow_government.svg" alt="Московское правительство"
+                        <img src="../lib/partners/moscow_government.svg" alt="Московское правительство"
                             class="partner-image">
                     </div>
                     <div class="partner-card">
-                        <img src="/lib/partners/tm_pz.svg" alt="TM PZ" class="partner-image">
+                        <img src="../lib/partners/tm_pz.svg" alt="TM PZ" class="partner-image">
                     </div>
                     <div class="partner-card">
-                        <img src="/lib/partners/kamaz.svg" alt="КАМАЗ" class="partner-image">
+                        <img src="../lib/partners/kamaz.svg" alt="КАМАЗ" class="partner-image">
                     </div>
                     <div class="partner-card">
-                        <img src="/lib/partners/tatneft.svg" alt="Татнефть" class="partner-image">
+                        <img src="../lib/partners/tatneft.svg" alt="Татнефть" class="partner-image">
                     </div>
                     <div class="partner-card">
-                        <img src="/lib/partners/rostselmash.svg" alt="Ростсельмаш" class="partner-image">
+                        <img src="../lib/partners/rostselmash.svg" alt="Ростсельмаш" class="partner-image">
                     </div>
                     <div class="partner-card">
-                        <img src="/lib/partners/height.svg" alt="Height" class="partner-image">
+                        <img src="../lib/partners/height.svg" alt="Height" class="partner-image">
                     </div>
                 </div>
 
@@ -680,7 +680,7 @@
             <div class="footer-content">
                 <!-- Блок с фото слева -->
                 <div class="footer-logo">
-                    <img src="/lib/footer.svg" alt="Логотип компании" class="logo-img">
+                    <img src="../lib/footer.svg" alt="Логотип компании" class="logo-img">
                 </div>
 
                 <!-- Основной контент справа -->
@@ -699,15 +699,15 @@
                     <div class="footer-contacts">
                         <div class="contacts-info">
                             <div class="contact-item">
-                                <img src="/lib/letter.png" alt="Письмо" height="20">
+                                <img src="../lib/letter.png" alt="Письмо" height="20">
                                 <span class="contact-type">Email</span>
                             </div>
                             <div class="contact-item">
-                                <img src="/lib/geo.png" alt="Метка адресса" height="30">
+                                <img src="../lib/geo.png" alt="Метка адресса" height="30">
                                 <span class="contact-type">Адрес</span>
                             </div>
                             <div class="contact-item">
-                                <img src="/lib/clock.png" alt="Часы" height="30">
+                                <img src="../lib/clock.png" alt="Часы" height="30">
                                 <span class="contact-type">Время работы</span>
                             </div>
                         </div>
@@ -716,9 +716,9 @@
                             <span class="messengers-caption">Задайте вопрос в мессенджер</span>
                             <div class="messengers-list">
                                 <a href="https://vk.com/andrew_westnord" target="_blank" class="messenger-link"><img
-                                        src="/lib/vkontacte.svg" alt="ВКонтакте"></a>
+                                        src="../lib/vkontacte.svg" alt="ВКонтакте"></a>
                                 <a href="https://t.me/optoboxer" target="_blank" class="messenger-link"><img
-                                        src="/lib/telegram.svg" alt="Telegram"></a>
+                                        src="../lib/telegram.svg" alt="Telegram"></a>
                                 <a href="tel:+8618812603001" class="messenger-link"><img src="/lib/whatsapp.svg"
                                         alt="WhatsApp"></a>
                                 <a href="#" class="messenger-link"><img src="/lib/vichat1.png" alt="ViChat"></a>
