--- a/ru/index.html
+++ b/ru/index.html
@@ -8,7 +8,7 @@
     <title>Sinodeep</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="../css/reset.css">
     <script defer src="../js/script.js"></script>
     <script defer src="../server.js"></script>
 
