--- a/ru/index.html
+++ b/ru/index.html
@@ -719,9 +719,9 @@
                                         src="../lib/vkontacte.svg" alt="ВКонтакте"></a>
                                 <a href="https://t.me/optoboxer" target="_blank" class="messenger-link"><img
                                         src="../lib/telegram.svg" alt="Telegram"></a>
-                                <a href="tel:+8618812603001" class="messenger-link"><img src="/lib/whatsapp.svg"
+                                <a href="tel:+8618812603001" class="messenger-link"><img src="../lib/whatsapp.svg"
                                         alt="WhatsApp"></a>
-                                <a href="#" class="messenger-link"><img src="/lib/vichat1.png" alt="ViChat"></a>
+                                <a href="#" class="messenger-link"><img src="../lib/vichat1.png" alt="ViChat"></a>
                             </div>
                         </div>
                     </div>
