--- a/en/index.html
+++ b/en/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
+    <base href="/Sinodeep/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Sinodeep</title>
@@ -96,7 +97,7 @@
                             </div>
                         </div>
                     </div>
-                    <h1 class="hero__title">Открываем Китай<br> для вашего бизнеса</h1>
+                    <h1 class="hero__title">Открываемм Китай<br> для вашего бизнеса</h1>
                     <h3 class="hero__description">Мы не просто компания, мы – Ваш партнер, <br>который заботится о вас
                         на каждом шаге</h3>
                     <a href="#contact" class="hero__btn">Получить бесплатную консультацию</a>
