--- a/ru/index.html
+++ b/ru/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/reset.css">
-    <script defer src="../js/script.js"></script>
+    <script defer src="../js/main.js" defer></script>
     <script defer src="../server.js"></script>
 
     <meta name="keywords" content="sinodeep, Sinodeep">
@@ -38,7 +38,7 @@
     <header class="header">
         <div class="container navbar">
             <div class="navbar__logo">
-                <img src="../lib/logo.svg" alt="Sinodeep Logo" class="navbar__logo-image">
+                <img src="../lib/header/logo.svg" alt="Sinodeep Logo" class="navbar__logo-image">
             </div>
             <div class="navbar__links">
                 <a href="#portfolio" class="navbar__link" data-i18n="files">
@@ -61,9 +61,9 @@
                 </a>
             </div>
             <div class="navbar__right">
-                <button id="language-switcher" class="language-switcher" aria-label="Switch language">
-                    <img src="../lib/ruen.svg" alt="Русский" class="language-icon" id="language-icon">
-                </button>
+                <a id="language-switcher" class="language-switcher" aria-label="Switch language" href="../en/index.html">
+                    <img src="../lib/header/ruen.svg" alt="Русский" class="language-icon" id="language-icon">
+                </a>
             </div>
             <button class="burger-btn burger">
                 <span class="burger-line"></span>
@@ -73,7 +73,6 @@
         </div>
         <span class="line"></span>
     </header>
-
     <main>
         <!-- Hero Section -->
         <section id="hero" class="hero">
@@ -82,17 +81,17 @@
                     <div class="cubes-grid">
                         <div class="cube cube-1">
                             <div class="image-wrapper-cube">
-                                <img src="../lib/hero/1.svg" alt="Производство" class="cube-image">
+                                <img src="../lib/hero/cube1.svg" alt="Производство" class="cube-image">
                             </div>
                         </div>
                         <div class="cube cube-2">
                             <div class="image-wrapper">
-                                <img src="../lib/hero/2.svg" alt="Логистика" class="cube-image">
+                                <img src="../lib/hero/cube2.svg" alt="Логистика" class="cube-image">
                             </div>
                         </div>
                         <div class="cube cube-3">
                             <div class="image-wrapper">
-                                <img src="../lib/hero/3.svg" alt="Контроль" class="cube-image">
+                                <img src="../lib/hero/cube3.svg" alt="Контроль" class="cube-image">
                             </div>
                         </div>
                     </div>
@@ -181,7 +180,7 @@
                             </div>
                         </div>
                         <div class="extra--help-card extra--help-card4">
-                            <img class="extra_image" src="../lib/extraHelp.svg" alt="storage">
+                            <img class="extra_image" src="../lib/extraHelp/extraHelp.svg" alt="storage">
                         </div>
                     </div>
                 </div>
@@ -248,7 +247,7 @@
             <div class="container job-description__wrapper">
                 <div class="job-description__container">
                     <div>
-                        <img class="job-description-image" src="../lib/jobDescription.png" alt="job-description">
+                        <img class="job-description-image" src="../lib/jobDescription/jobDescription.png" alt="job-description">
                     </div>
                     <div class="job-description__block">
                         <h2 class="job-description__title">Ваш прямой доступ к лучшим <br>производителям Китая</h2>
@@ -358,7 +357,7 @@
                     <h2 class="portfolio__title">Более 10 лет на службе вашего экспорта</h2>
                     <div class="portfolio-cards">
                         <div class="portfolio-card portfolio-card1">
-                            <img class="director-img" src="../lib/director.svg" alt="Директор-Андрей">
+                            <img class="director-img" src="../lib/portfolio/director.svg" alt="Директор-Андрей">
                         </div>
                         <div class="portfolio-card portfolio-card2">
                             <h3 class="portfolio-content-text">Меня зовут Андрей, я являюсь генеральным директором
@@ -388,7 +387,7 @@
                     <div class="col-lg-3">
                         <div class="choose__item">
                             <div>
-                                <img class="why-img" src="../img/why1.png" alt="человек одобряет">
+                                <img class="why-img" src="../lib/advantages/why1.png" alt="человек одобряет">
                             </div>
                             <h3 class="choose__item-title">Комплексные решения:</h3>
                             <p class="choose__item-text">Поможем Вам на каждом этапе – от поиска товара до его доставки
@@ -398,7 +397,7 @@
                     <div class="col-lg-3">
                         <div class="choose__item">
                             <div>
-                                <img class="why-img" src="../img/why2.png" alt="пазл">
+                                <img class="why-img" src="../lib/advantages/why2.png" alt="пазл">
                             </div>
                             <h3 class="choose__item-title1">Опыт и знания:</h3>
                             <p class="choose__item-text">Знаем рынок Китая, как свои пять пальцев, и готовы поделиться
@@ -408,7 +407,7 @@
                     <div class="col-lg-3">
                         <div class="choose__item">
                             <div>
-                                <img class="why-img" src="../img/why3.png" alt="книга с лампочкой">
+                                <img class="why-img" src="../lib/advantages/why3.png" alt="книга с лампочкой">
                             </div>
                             <h3 class="choose__item-title">Надежность и прозрачность:</h3>
                             <p class="choose__item-text">Для нас важны честность и открытость на каждом этапе
@@ -418,7 +417,7 @@
                     <div class="col-lg-3">
                         <div class="choose__item">
                             <div>
-                                <img class="why-img" src="../img/why4.png" alt="одобрено">
+                                <img class="why-img" src="../lib/advantages/why4.png" alt="одобрено">
                             </div>
                             <h3 class="choose__item-title">Персональный подход:</h3>
                             <p class="choose__item-text">Работаем как партнеры и адаптируем наши услуги под Ваши
@@ -509,16 +508,16 @@
                             <h3 class="contacts__title">Задайте вопрос в мессенджер</h3>
                             <div class="messengers">
                                 <a href="https://vk.com/andrew_westnord" target="_blank" class="messenger-item">
-                                    <img src="../lib/vkontacteBlue.svg" alt="Vkontakte">
+                                    <img src="../lib/messengers/vkontacteBlue.svg" alt="Vkontakte">
                                 </a>
                                 <a href="https://t.me/optoboxer" target="_blank" class="messenger-item">
-                                    <img src="../lib/telegramBlue.svg" alt="Telegram">
+                                    <img src="../lib/messengers/telegramBlue.svg" alt="Telegram">
                                 </a>
                                 <a href="tel:+8618812603001" class="messenger-item">
-                                    <img src="../lib/whatsappBlue.svg" alt="WhatsApp">
+                                    <img src="../lib/messengers/whatsappBlue.svg" alt="WhatsApp">
                                 </a>
                                 <a href="#" class="messenger-item">
-                                    <img src="../lib/vichat2.png" alt="ViChat">
+                                    <img src="../lib/messengers/vichatBlue.png" alt="ViChat">
                                 </a>
                             </div>
                         </div>
@@ -582,7 +581,7 @@
                         <img src="../lib/partners/tm_pz.svg" alt="TM PZ" class="partner-image">
                     </div>
                     <div class="partner-card">
-                        <img src="..lib/partners/kamaz.svg" alt="КАМАЗ" class="partner-image">
+                        <img src="../lib/partners/kamaz.svg" alt="КАМАЗ" class="partner-image">
                     </div>
                     <div class="partner-card">
                         <img src="../lib/partners/tatneft.svg" alt="Татнефть" class="partner-image">
@@ -628,114 +627,88 @@
             </div>
         </section>
 
-
         <!-- Questions Section -->
         <section id="questions" class="questions">
             <div class="container container_questions">
                 <div class="question">
-                    <h2 class="name-question">Часто задаваемые вопросы</h2>
-                    <div class="question-container">
-                        <div class="questioncard">
-                            <input type="checkbox" id="questioncard1" />
-                            <label for="questioncard1">Есть ли у вас минимальная сумма заказа?</label>
-                            <div class="question__hidden">Содержимое 1</div>
-                        </div>
+                    <h2 class="question__title">Часто задаваемые вопросы</h2>
+                    <div class="question__accordion__item">
+                        <h3 class="question__accordion__question">Есть ли у вас минимальная сумма заказа?</h3>
+                        <div class="question__accordion__answer"><h3>Содержимое 1</h3></div>
                     </div>
-                    <div class="question-container">
-                        <div class="questioncard">
-                            <input type="checkbox" id="questioncard2" />
-                            <label for="questioncard2">Какие документы необходимы для оформления доставки?</label>
-                            <div class="question__hidden">Содержимое 2</div>
-                        </div>
+                    <div class="question__accordion__item">
+                        <h3 class="question__accordion__question">Какие документы необходимы для оформления доставки?</h3>
+                        <div class="question__accordion__answer"><h3>Содержимое 2</h3></div>
                     </div>
-                    <div class="question-container">
-                        <div class="questioncard">
-                            <input type="checkbox" id="questioncard3" />
-                            <label for="questioncard3">Кто несет ответственность за повреждение груза во время
-                                доставки?</label>
-                            <div class="question__hidden">Содержимое 3</div>
-                        </div>
+                    <div class="question__accordion__item">
+                        <h3 class="question__accordion__question">Кто несет ответственность за повреждение груза во время доставки?</h3>
+                        <div class="question__accordion__answer"><h3>Содержимое 3</h3></div>
                     </div>
-                    <div class="question-container">
-                        <div class="questioncard">
-                            <input type="checkbox" id="questioncard4" />
-                            <label for="questioncard4">Оказываете ли вы помощь в таможенном оформлении?</label>
-                            <div class="question__hidden">Содержимое 4</div>
-                        </div>
+                    <div class="question__accordion__item">
+                        <h3 class="question__accordion__question">Оказываете ли вы помощь в таможенном оформлении?</h3>
+                        <div class="question__accordion__answer"><h3>Содержимое 4</h3></div>
                     </div>
-                    <div class="question-container">
-                        <div class="questioncard">
-                            <input type="checkbox" id="questioncard5" />
-                            <label for="questioncard5">Предоставляете ли вы услуги по упаковке груза?</label>
-                            <div class="question__hidden">Содержимое 5</div>
-                        </div>
+                    <div class="question__accordion__item">
+                        <h3 class="question__accordion__question">Предоставляете ли вы услуги по упаковке груза?</h3>
+                        <div class="question__accordion__answer"><h3>Содержимое 5</h3></div>
                     </div>
                 </div>
             </div>
         </section>
-
     </main>
-    <footer>
+    <footer class="footer">
         <div id="contacts" class="footer__container">
-            <div class="footer-content">
-                <!-- Блок с фото слева -->
+            <div class="container footer__container">
                 <div class="footer-logo">
-                    <img src="../lib/footer.svg" alt="Логотип компании" class="logo-img">
+                    <img src="../lib/footer/footer.svg" alt="Логотип компании" class="logo-img">
                 </div>
-
-                <!-- Основной контент справа -->
                 <div class="footer-right">
-                    <!-- Навигационное меню -->
                     <nav class="footer-nav">
-                        <a href="#" class="footer-link">Портфолио</a>
-                        <a href="#" class="footer-link">Услуги</a>
-                        <a href="#" class="footer-link">Преимущества</a>
-                        <a href="#" class="footer-link">Процесс работы</a>
-                        <a href="#" class="footer-link">Вопросы</a>
-                        <a href="#" class="footer-link">Контакты</a>
+                        <a href="#portfolio" class="footer-link"><h3>Портфолио</h3></a>
+                        <a href="#services" class="footer-link"><h3>Услуги</h3></a>
+                        <a href="#advantages" class="footer-link"><h3>Преимущества</h3></a>
+                        <a href="#process" class="footer-link"><h3>Процесс работы</h3></a>
+                        <a href="#questions" class="footer-link"><h3>Вопросы</h3></a>
+                        <a href="#contacts" class="footer-link"><h3>Контакты</h3></a>
                     </nav>
-
-                    <!-- Контактная информация -->
                     <div class="footer-contacts">
                         <div class="contacts-info">
                             <div class="contact-item">
-                                <img src="../lib/letter.png" alt="Письмо" height="20">
-                                <span class="contact-type">Email</span>
+                                <img src="../lib/footer/contacts/letter.svg" alt="Письмо">
+                                <h3 class="contact-type">Email</h3>
                             </div>
                             <div class="contact-item">
-                                <img src="../lib/geo.png" alt="Метка адресса" height="30">
-                                <span class="contact-type">Адрес</span>
+                                <img src="../lib/footer/contacts/geo.svg" alt="Метка адресса">
+                                <h3 class="contact-type">Адрес</h3>
                             </div>
                             <div class="contact-item">
-                                <img src="../lib/clock.png" alt="Часы" height="30">
-                                <span class="contact-type">Время работы</span>
+                                <img src="../lib/footer/contacts/clock.svg" alt="Часы">
+                                <h3 class="contact-type">Время работы</h3>
                             </div>
                         </div>
-
                         <div class="messengers-block">
-                            <span class="messengers-caption">Задайте вопрос в мессенджер</span>
+                            <h3 class="messengers-caption">Задайте вопрос в мессенджер</h3>
                             <div class="messengers-list">
                                 <a href="https://vk.com/andrew_westnord" target="_blank" class="messenger-link"><img
-                                        src="../lib/vkontacte.svg" alt="ВКонтакте"></a>
+                                        src="../lib/messengers/vkontacteBlack.svg" alt="ВКонтакте"></a>
                                 <a href="https://t.me/optoboxer" target="_blank" class="messenger-link"><img
-                                        src="../lib/telegram.svg" alt="Telegram"></a>
-                                <a href="tel:+8618812603001" class="messenger-link"><img src="../lib/whatsapp.svg"
+                                        src="../lib/messengers/telegramBlack.svg" alt="Telegram"></a>
+                                <a href="tel:+8618812603001" class="messenger-link"><img src="../lib/messengers/whatsappBlack.svg"
                                         alt="WhatsApp"></a>
-                                <a href="#" class="messenger-link"><img src="../lib/vichat1.png" alt="ViChat"></a>
+                                <a href="#" class="messenger-link"><img src="../lib/messengers/vichatBlack.svg" alt="ViChat"></a>
                             </div>
                         </div>
                     </div>
 
                     <!-- Кнопка и политика -->
                     <div class="footer-actions">
-                        <button class="consult-button">Получить бесплатную консультацию</button>
-                        <a href="#" class="privacy-policy">Политика конфиденциальности</a>
+                        <button class="consult-button">Получите бесплатную консультацию</button>
+                        <a href="#" class="privacy-policy"><h3>Политика конфиденциальности</h3></a>
                     </div>
                 </div>
             </div>
         </div>
     </footer>
-
 </body>
 
 </html>
