--- a/ru/index.html
+++ b/ru/index.html
@@ -74,6 +74,24 @@
         <span class="line"></span>
     </header>
     <main>
+        
+        <a class="fix-btn" href="#">
+            <h4 class="fix-title">Задать вопрос</h4>
+            <img src="../lib/fix.svg" alt="">
+        </a>
+        <div class="fix-info">
+            <h4 class="fix-title">Напишите нам, мы <br>всегда онлайн!</h4>
+            <div class="fix-messengers-list">
+                <a href="https://vk.com/andrew_westnord" target="_blank" class="fix-messenger-link"><img
+                        src="../lib/messengers/vkontacteWhite.svg" alt="ВКонтакте"></a>
+                <a href="https://t.me/optoboxer" target="_blank" class="fix-messenger-link"><img
+                        src="../lib/messengers/telegramWhite.svg" alt="Telegram"></a>
+                <a href="tel:+8618812603001" class="fix-messenger-link"><img src="../lib/messengers/whatsappWhite.svg"
+                        alt="WhatsApp"></a>
+                <a href="#" class="fix-messenger-link"><img src="../lib/messengers/vichatWhite.svg" alt="ViChat"></a>
+            </div>
+        </div>
+
         <!-- Hero Section -->
         <section id="hero" class="hero">
             <div class="container hero__wrapper">
