--- a/ru/index.html
+++ b/ru/index.html
@@ -15,8 +15,7 @@
     <meta name="description" content="Открываем Китай для вашего бизнеса">
 
     <link rel="icon" type="image/ico" sizes="32x32" href="../lib/logo_without_text.svg">
-    <link rel="icon" type="image/ico" sizes="16x16" href="../lib/logo_without_text.svg">
-    <link rel="shortcut icon" href="/icons/icon1.ico">
+    <link rel="icon" type="image/ico" sizes="16x16" href="../lib/logo_without_text.svg">    
 
     <meta property="og:title" content="Sinodeep">
     <meta property="og:site_name" content="Sinodeep">
@@ -733,11 +732,11 @@
             </div>
         </section>
     </main>
-    <footer class="footer">
+    <footer id="contacts" class="footer">
         <div id="contacts" class="footer__container">
             <div class="container footer__container">
                 <div class="footer-logo">
-                    <img src="../lib/footer/footer.svg" alt="Логотип компании" class="logo-img">
+                    <img src="../lib/footer/footer.svg" alt="Логотип компании" class="footer-img">
                 </div>
                 <div class="footer-right">
                     <nav class="footer-nav">
@@ -763,15 +762,15 @@
                     <div class="footer-contacts">
                         <div class="contacts-info">
                             <div class="contact-item">
-                                <img src="../lib/footer/contacts/letter.svg" alt="Письмо">
+                                <img class="contact-item-img" src="../lib/footer/contacts/letter.svg" alt="Письмо">
                                 <h3 class="contact-type">Email</h3>
                             </div>
                             <div class="contact-item">
-                                <img src="../lib/footer/contacts/geo.svg" alt="Метка адресса">
+                                <img class="contact-item-img" src="../lib/footer/contacts/geo.svg" alt="Метка адресса">
                                 <h3 class="contact-type">Адрес</h3>
                             </div>
                             <div class="contact-item">
-                                <img src="../lib/footer/contacts/clock.svg" alt="Часы">
+                                <img class="contact-item-img" src="../lib/footer/contacts/clock.svg" alt="Часы">
                                 <h3 class="contact-type">Время работы</h3>
                             </div>
                         </div>
